# poindexter

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.production  .env.production.example  .env.staging  .env.tier1.production  .firebaserc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks-baseline.json  .gitleaks.toml  .markdownlint.json  .mintignore  .pre-commit-config.yaml  .prettierignore  .railway.tier1.json  .railwayignore  .release-please-manifest.json  .trivyignore  .trivyignore.yaml  .woodpecker.yml  422_ERROR_DIAGNOSIS.md  422_FIX_COMPLETE.md  422_QUICK_FIX.md  ACTION_ITEMS_TEST_CLEANUP.md  ACTION_SUMMARY.md  ADSENSE_QUICK_CHECKLIST.md  ADSENSE_VERDICT_APPROVED.md  AGENT_LOOP_IMPROVEMENTS.md  AGENT_LOOP_README.md  ALL_RECOMMENDATIONS_COMPLETE.md  ALTERNATIVE_IMAGE_HOSTING_OPTIONS.md  ANALYSIS_QUICK_REFERENCE.md  API_CONSOLIDATION_COMPLETED.md  API_INTEGRATION_COMPLETE.md  API_TOKEN_SETUP.txt  API_TO_STRAPI_TEST_GUIDE.md  (+1092 more)
brain/: Dockerfile  README.md  __init__.py  alert_dispatcher.py  alert_sync.py  anomaly_probe.py  auto_embed_watch.py  backup_watcher.py  bootstrap.py  brain_daemon.py  branch_drift_probe.py  business_probes.py  compose_drift_probe.py  corsair_feed_probe.py  data_freshness_probe.py  discord_bot_probe.py  docker_port_forward_probe.py  docker_utils.py  findings_dispatcher.py  gate_auto_expire_probe.py  gate_pending_summary_probe.py  glitchtip_triage_probe.py  health_probes.py  mcp_http_probe.py  migration_drift_probe.py  oauth_client.py  offsite_backup_watch.py  operator_notifier.py  operator_url_probe.py  post_performance_probe.py  pr_staleness_probe.py  prefect_stuck_flow_probe.py  probe_interface.py  prometheus_secret_writer.py  psu_power.py  pyproject.toml  restore_test_probe.py  secret_reader.py  seed_app_settings.json  seed_loader.py  (+2 more)
brain/hallucination-check/: library-topics.json  ollama-models.txt  pypi-top-500.txt  stdlib-python-312.txt
mcp-server/: http_server.py  oauth_client.py  pyproject.toml  server.py
mcp-server-gladlabs/: oauth_client.py  pyproject.toml  server.py
mcp-server-voice/: README.md  audio_plane_pipecat.py  bridge_worker.py  livekit_bridge.py  pyproject.toml  server.py
mcp-server-voice/scripts/: test_voice_bridge_round_trip.py  test_voice_bridge_smoke.py
mcp-server-voice/tests/: test_audio_plane_pipecat.py  test_livekit_bridge.py
mcp-server/tests/: test_http_tool_allowlist.py  test_post_edit_tools.py  test_rebuild_static_export.py  test_set_setting.py  test_start_voice_call.py
src/cofounder_agent/: .coverage  .deploy-trigger  .dockerignore  .env.example  BEFORE_AFTER_DUPLICATION_FIX.md  CLEANUP_ANALYSIS_COMPREHENSIVE.md  COMPREHENSIVE_DUPLICATION_AND_BLOAT_ANALYSIS.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.worker  ENDPOINT_CONSOLIDATION_SUMMARY.md  FILE_INDEX.txt  IMPLEMENTATION_CHECKLIST.md  LICENSE.md  PHASE_1_1_COMPLETE.md  PHASE_1_1_SUMMARY.md  PHASE_1_NEXT_STEPS.md  POINDEXTER_IMPLEMENTATION_COMPLETE.md  POINDEXTER_INTEGRATION_GUIDE.py  POINDEXTER_ORCHESTRATOR_DESIGN.md  QUICK_START_REFERENCE.py  README.md  README_TESTING.md  ROUTE_DEDUPLICATION_ANALYSIS.md  STARTUP_INTEGRATION_EXAMPLE.py  START_HERE_TESTING.md  TESTING_COMMAND_REFERENCE.md  TESTING_INTEGRATION_GUIDE.md  TESTING_INTEGRATION_SUMMARY.md  VISUAL_SUMMARY.md  __init__.py  admin.py  advanced_dashboard.py  business_intelligence.py  check_results.py  check_schema.py  database.py  demo_cofounder.py  encryption.py  init_cms_db.py  (+39 more)
src/cofounder_agent/agents/: blog_content_generator_agent.py  blog_image_agent.py  blog_publisher_agent.py  blog_quality_agent.py  registry.py
src/cofounder_agent/ai_memory_system/: memory.db
src/cofounder_agent/archive/: ACTION_ITEMS_DUPLICATION_FIXES.md  ANALYSIS_INDEX.md  BEFORE_AFTER_COMPARISON.md  CONSOLIDATION_DEDUPLICATION_FINAL_STATUS.md  CONSOLIDATION_DEDUPLICATION_INDEX.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_SUMMARY.md  DUPLICATION_BLOAT_QUICK_REFERENCE.md  FINAL_STATUS_REPORT.md  MAIN_REFACTORING_SUMMARY.md  ORCHESTRATOR_INTEGRATION_GUIDE.md  PHASE_1_COMPLETE_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_INTEGRATION.md  STARTUP_MANAGER_REFERENCE.md  STARTUP_MIGRATION_GUIDE.md  VISUAL_DUPLICATION_BLOAT_ANALYSIS.md  VISUAL_SUMMARY.md
src/cofounder_agent/business_intelligence_data/: business_intelligence.db
src/cofounder_agent/clients/: progress_client.py
src/cofounder_agent/config/: __init__.py  constants.py
src/cofounder_agent/console/: README.md  index.html
src/cofounder_agent/data/: system_knowledge.md
src/cofounder_agent/middleware/: api_token_auth.py  audit_logging.py  cache_control.py  input_validation.py  jwt.py  profiling_middleware.py  prometheus_metrics.py  request_id.py  token_validation.py
src/cofounder_agent/migrations/: 001_add_approval_workflow_fields.sql  001_add_missing_task_columns.sql  001_create_task_status_history.sql  001_initial_schema.sql  002_quality_evaluation.sql  002a_cost_logs_table.sql  003_training_data_tables.sql  004_writing_samples.sql  005_add_writing_style_id.sql  006_add_all_required_columns.sql  007_consolidate_to_single_tasks_table.sql  008_create_cms_tables.sql  009_add_multi_phase_model_tracking.sql  010_newsletter_subscribers.sql  011_admin_logging_table.sql  012_financial_tracking_table.sql  013_agent_status_tracking_table.sql  014_add_post_tags_table.sql  015_fix_timestamp_types.sql  016_fix_cost_logs_task_id_type.sql  017_add_status_check_constraints.sql  018_remove_duplicate_indexes.sql  019_fix_content_tasks_id_column.sql  020_fix_writing_samples_user_id_type.sql  021_add_trigram_search_indexes.sql  022_fix_quality_score_column_types.sql  023_add_configurable_settings.sql  024_add_embeddings_writer_column.sql  025_add_app_settings_is_active.sql  026_add_llm_provider_setting.sql  add_cost_columns.py  add_task_type_column.sql  alter_settings_table.py  apply-migrations.sh  apply_migrations.py  create_settings_table.py  fix_duplicate_indexes.sql  fix_staging_indexes.sql
src/cofounder_agent/models/: workflow.py
src/cofounder_agent/modules/: __init__.py
src/cofounder_agent/plugins/: __init__.py  atom.py  config.py  job.py  (+24 more)
(+6003 files in other folders)
