[tool.poetry]
name = "glad-labs"
version = "0.1.0"
description = "Production-ready AI orchestration system with autonomous agents, multi-provider LLM routing, and full-stack web applications"
authors = ["Matthew M. Gladding <mattg@gladlabs.io>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai-tools = "^1.7.2"

# Use headless opencv (doesn't require X11/GUI libraries in production)
opencv-python-headless = "^4.8.0"

# Optional ML/AI dependencies for SDXL image generation
torch = { version = ">=2.0.0", optional = true }
diffusers = { version = ">=0.30.0", optional = true }
transformers = { version = ">=4.40.0", optional = true }
accelerate = { version = ">=0.24.0", optional = true }
asyncpg = "^0.31.0"
markdown = "^3.10"
google-generativeai = "^0.8.6"
google-genai = ">=0.3.0"  # New Google Generative AI SDK (replaces deprecated google-generativeai)

[tool.poetry.extras]
ml = ["torch", "diffusers", "transformers", "accelerate"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "glad-labs"
version = "0.1.0"
description = "Python agents for Glad Labs"
authors = [
  { name="Matthew M. Gladding", email="mattg@gladlabs.io" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "src/cofounder_agent"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "smoke: smoke tests - quick sanity checks",
]
[tool.mypy]
# Type checking configuration for FastAPI backend
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

# Library stubs
ignore_missing_imports = true

# Source locations to type-check
mypy_path = "src"
files = [
    "src/cofounder_agent",
]

# Exclude test directories
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[tool.isort]
# Import sorting configuration
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.black]
# Code formatting configuration
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | tests
)/
'''