[tool.poetry]
name = "poindexter"
version = "0.5.0"
description = "Poindexter — production-ready AI content pipeline with autonomous agents, multi-provider LLM routing, and full-stack web applications. Built by Glad Labs LLC."
authors = ["Matthew M. Gladding <hello@gladlabs.io>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
# crewai removed 2026-05-08: dead path per the 2026-05-08 services
# audit (agents/content_agent/ subtree has zero route handlers, zero
# recent commits, and blocks Python 3.14 support). The full deletion
# of the content_agent tree is tracked separately.
python-dotenv = "^1.1.1"

# Use headless opencv (doesn't require X11/GUI libraries in production)
opencv-python-headless = "^4.8.0"

# Optional ML/AI dependencies for SDXL image generation.
# torch is sourced from the explicit pytorch-cu128 index (defined in
# the [[tool.poetry.source]] block at the bottom of this file) so the
# 5090 (Blackwell, sm_120) gets the right CUDA kernels — the default
# PyPI wheel is CPU-only and SDXL silently fails on it. See
# Glad-Labs/glad-labs-stack#334. >=2.7 ensures Blackwell support.
torch = { version = ">=2.7", source = "pytorch-cu128", optional = true }
diffusers = { version = ">=0.30.0", optional = true }
transformers = { version = ">=4.40.0", optional = true }
accelerate = { version = ">=0.24.0", optional = true }
asyncpg = "^0.31.0"
httpx = "^0.27.0"  # HTTP client for test fixtures and API testing
markdown = "^3.10"
email-validator = ">=2.0.0"
sentry-sdk = { version = ">=1.40.0", extras = ["fastapi"] }
pytest = "^8.0"  # Testing framework
pytest-asyncio = "^0.24.0"  # Async test support
pytest-cov = "^5.0.0"  # Coverage reporting
opentelemetry-api = "^1.41.0"
opentelemetry-sdk = "^1.41.0"
mcp-server-fetch = "^2025.4.7"
structlog = "^25.5.0"
aiofiles = "^25.1.0"

# Direct social-media APIs (GH-36 — retires dlvr.it). Both are MIT-licensed
# and call the platform's free/public endpoints; no paid tier required.
atproto = ">=0.0.55"          # Bluesky AT Protocol client
"Mastodon.py" = ">=1.8.1"     # Mastodon API client (Fediverse)

[tool.poetry.extras]
ml = ["torch", "diffusers", "transformers", "accelerate"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Explicit-priority source for the CUDA-built torch wheels.
# priority="explicit" means poetry only consults this index for
# packages that pin source = "pytorch-cu128"; everything else still
# resolves from PyPI. See Glad-Labs/glad-labs-stack#334 for the bug
# this fixes (CPU torch broke SDXL on Matt's RTX 5090).
[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[project]
name = "poindexter"
version = "0.5.0"
description = "Poindexter — Python agents and content pipeline. Built by Glad Labs LLC."
authors = [
  { name="Matthew M. Gladding", email="hello@gladlabs.io" },
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "src/cofounder_agent"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--load-dotenv",
]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "smoke: smoke tests - quick sanity checks",
    "error_scenario: error scenario tests",
    "concurrent: concurrent execution tests",
]
[tool.mypy]
# Type checking configuration for FastAPI backend
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

# Library stubs
ignore_missing_imports = true

# Source locations to type-check
mypy_path = "src"
files = [
    "src/cofounder_agent",
]

# Exclude test directories
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[tool.isort]
# Import sorting configuration
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.black]
# Code formatting configuration
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | tests
)/
'''
[dependency-groups]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "types-requests (>=2.32.0,<3.0.0)"
]
