[tool.poetry]
name = "poindexter"
version = "0.5.0"
description = "Poindexter — production-ready AI content pipeline with autonomous agents, multi-provider LLM routing, and full-stack web applications. Built by Glad Labs LLC."
authors = ["Glad Labs LLC <hello@gladlabs.io>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
# crewai removed 2026-05-08: dead path per the 2026-05-08 services
# audit (agents/content_agent/ subtree has zero route handlers, zero
# recent commits, and blocks Python 3.14 support). The full deletion
# of the content_agent tree is tracked separately.
python-dotenv = "^1.1.1"

# Optional ML/AI dependencies for SDXL image generation.
# torch is sourced from the explicit pytorch-cu128 index (defined in
# the [[tool.poetry.source]] block at the bottom of this file) so the
# 5090 (Blackwell, sm_120) gets the right CUDA kernels — the default
# PyPI wheel is CPU-only and SDXL silently fails on it. See
# Glad-Labs/glad-labs-stack#334. >=2.7 ensures Blackwell support.
torch = { version = ">=2.7", source = "pytorch-cu128", optional = true }
diffusers = { version = ">=0.30.0", optional = true }
transformers = { version = ">=4.40.0", optional = true }
accelerate = { version = ">=0.24.0", optional = true }
asyncpg = "^0.31.0"
httpx = "^0.27.0"  # HTTP client — floor below ^0.28 (backend) because mcp-server-fetch 2025.4.7 requires httpx<0.28
markdown = "^3.10"
email-validator = ">=2.0.0"
# cryptography is only a transitive dependency here, but pin a security floor
# so the lock can't sit on a vulnerable build — >=48.0.1 clears the bundled-
# OpenSSL advisory GHSA-537c-gmf6-5ccf (Trivy HIGH; fixed in 48.0.1).
cryptography = ">=48.0.1"
sentry-sdk = { version = ">=1.40.0", extras = ["fastapi"] }
pytest = ">=9.0.3,<10.0"  # Testing framework — bumped to 9.x for the tmpdir CVE fix
pytest-asyncio = ">=1.0,<2.0"  # Async test support — 1.0+ supports pytest 9.x
pytest-cov = "^5.0.0"  # Coverage reporting
opentelemetry-api = "^1.41.0"
opentelemetry-sdk = "^1.41.0"
mcp-server-fetch = "^2025.4.7"
structlog = "^25.5.0"

# Direct social-media API (GH-36 — retires dlvr.it). MIT-licensed,
# free/public endpoints, no paid tier. (atproto/Bluesky dropped 2026-06-17 —
# its cryptography<47 cap blocked the cryptography>=48.0.1 fix for the
# GHSA-537c-gmf6-5ccf Trivy HIGH; Bluesky cross-posting retired with it.)
"Mastodon.py" = ">=1.8.1"     # Mastodon API client (Fediverse)

[tool.poetry.extras]
ml = ["torch", "diffusers", "transformers", "accelerate"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Explicit-priority source for the CUDA-built torch wheels.
# priority="explicit" means poetry only consults this index for
# packages that pin source = "pytorch-cu128"; everything else still
# resolves from PyPI. See Glad-Labs/glad-labs-stack#334 for the bug
# this fixes (CPU torch broke SDXL on Matt's RTX 5090).
[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[project]
name = "poindexter"
version = "0.5.0"
description = "Poindexter — Python agents and content pipeline. Built by Glad Labs LLC."
authors = [
  { name="Glad Labs LLC", email="hello@gladlabs.io" },
]
readme = "README.md"
requires-python = ">=3.13"
# SPDX license expression — the repo is Apache-2.0 (see LICENSE and
# src/LICENSE.md; relicensed from AGPL on 2026-04-29). The prior MIT
# classifier was wrong (poindexter#645).
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "src/cofounder_agent"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--load-dotenv",
]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "smoke: smoke tests - quick sanity checks",
    "error_scenario: error scenario tests",
    "concurrent: concurrent execution tests",
]
[tool.mypy]
# Type checking configuration for FastAPI backend
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true
# Completeness noise (~72% of 1278-error backlog) — real-bug codes
# (return-value, union-attr, arg-type, attr-defined) remain active.
# Re-enable incrementally as annotations improve. See issue #1550.
disable_error_code = ["no-untyped-def", "type-arg", "no-any-return", "untyped-decorator"]

# Library stubs
ignore_missing_imports = true

# Source locations to type-check. Paths use $MYPY_CONFIG_FILE_DIR (this file's
# directory = the repo root) so they resolve regardless of mypy's cwd: the
# `type:check` npm script runs `cd src/cofounder_agent` first (to pick up the
# backend poetry env), under which the old repo-relative `files` resolved to a
# non-existent `src/cofounder_agent/src/cofounder_agent` ("cannot read file").
# explicit_package_bases + mypy_path pinned at the package root make
# src/cofounder_agent the single base, so modules are named `services.x` /
# `modules.x` (matching runtime imports) rather than being found twice under
# both `services.x` and `src.cofounder_agent.services.x`.
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/cofounder_agent"
explicit_package_bases = true
namespace_packages = true
files = ["$MYPY_CONFIG_FILE_DIR/src/cofounder_agent"]

# Exclude test directories
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[tool.isort]
# Import sorting configuration
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.black]
# Code formatting configuration
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | tests
)/
'''
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E4/E7/E9: pycodestyle imports/comparisons/runtime. F: pyflakes. I: isort.
# B: flake8-bugbear. UP: pyupgrade. C4: comprehensions. ARG: unused-arguments.
# Deliberately excludes E5 (line-length) — line lengths are enforced by Black.
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "C4", "ARG"]
ignore = [
    # Handler callbacks receive a fixed positional signature (pool, payload,
    # site_config) regardless of whether each handler uses every arg.
    "ARG001",
    "ARG002",
    # Conditional / guard imports after module-level constants are intentional
    # throughout (e.g. gpu_scheduler, telemetry, topic_ranking). Not a bug.
    "E402",
    # dict() vs {} is a style preference; both are idiomatic in this codebase.
    "C408",
    # Ambiguous single-letter names (l/O/I) exist in legacy helpers; rename
    # when touching, don't block CI on them.
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# pytest.raises without a match= pattern is acceptable in frozen-dataclass
# tests where we just want "any exception, not a specific message".
"tests/**" = ["B017"]
"src/cofounder_agent/tests/**" = ["B017"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "types-requests (>=2.32.0,<3.0.0)"
]
