[project]
name = "gladlabs-mcp"
version = "0.1.0"
description = "Glad Labs operator MCP Server — private business tools layered on Poindexter. Not shipped publicly."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
