[tool.poetry]
name = "poindexter-voice-bridge"
version = "0.2.0"
description = "LiveKit voice bridge — voice as a session-agnostic UI surface for any Claude Code session."
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mcp = ">=1.4"
asyncpg = "^0.31"
httpx = "^0.28"

# Audio plane — shipped in PR #2 (was deferred from PR #1 control plane).
# Versions kept in lockstep with scripts/Dockerfile.voice-agent so the
# always-on voice-agent-livekit container and this MCP-side bridge
# share one Pipecat closure (services/voice_pipecat.py). Update both
# files together when bumping any of these.
#
# pipecat-ai is installed with the same extras as the Dockerfile;
# poetry's TOML grammar requires explicit lists in the inline table.
pipecat-ai = { version = ">=0.0.49,<1.0", extras = ["silero", "whisper", "kokoro", "livekit"] }
livekit = ">=0.18,<1.0"
livekit-api = ">=0.7,<1.0"
faster-whisper = ">=1.1,<2.0"
onnxruntime-gpu = { version = ">=1.20,<2.0", optional = true }
kokoro = ">=0.7,<1.0"

[tool.poetry.extras]
# Operators on a CPU-only box (or running tests in CI) skip
# onnxruntime-gpu — the regular onnxruntime wheel pulled by
# faster-whisper's extras handles inference. Operators with a 5090
# install the gpu extra to get the CUDA-accelerated wheel.
gpu = ["onnxruntime-gpu"]

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
