[project]
name = "poindexter-voice-bridge"
version = "0.5.0"
description = "LiveKit voice bridge — voice as a session-agnostic UI surface for any Claude Code session."
requires-python = ">=3.13,<3.15"
dependencies = [
    "mcp[cli]>=1.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
# Heavy audio plane — only install when actually exercising the
# Pipecat/Whisper/Kokoro round-trip. The default boot path uses
# NoopAudioMediaPlane, so a fresh `uv run` of the MCP server starts
# cleanly without any of these. Versions stay in lockstep with
# scripts/Dockerfile.voice-agent so the always-on container and the
# MCP bridge share one Pipecat closure (services/voice_pipecat.py).
audio = [
    # pipecat-ai >=0.0.94 closes the LivekitFrameSerializer RCE
    # (GHSA-rh63-jh82-7r3w). pillow >=12.2.0 closes a cluster of OOB
    # write / DoS / integer overflow advisories. The 0.0.94+ resolver
    # requires livekit-api >=1.0.5 so the livekit constraints widen too.
    "pipecat-ai[silero,whisper,kokoro,livekit]>=0.0.94,<2.0",
    "pillow>=12.2.0,<13.0",
    "livekit>=1.0,<2.0",
    "livekit-api>=1.0.5,<2.0",
    "faster-whisper>=1.1,<2.0",
    "kokoro>=0.7,<1.0",
]
# CPU-only operators skip GPU. 5090 boxes do `uv pip install ".[gpu]"`.
gpu = [
    "onnxruntime-gpu>=1.20,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
