[project]
name = "poindexter-mcp"
version = "1.0.0"
description = "Poindexter MCP Server — AI content pipeline control. Built by Glad Labs LLC."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    # Required transitively by topics_propose: services.topic_proposal_service
    # → services.stages.topic_decision_gate → plugins (top-level
    # plugins/__init__.py imports plugins.scheduler, which imports
    # apscheduler.schedulers.asyncio). Pinned to match
    # src/cofounder_agent/pyproject.toml ("^3.11.2"). See
    # Glad-Labs/poindexter#258.
    "apscheduler>=3.11.2,<4",
    # OAuth JWT verification for the HTTP transport (#241 Phase 1).
    # Kept on the same major as the cofounder_agent pin to avoid
    # signature-format drift between issuer and verifier.
    "pyjwt>=2.12.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
