[project]
name = "poindexter-mcp"
version = "0.5.0"
description = "Poindexter MCP Server — AI content pipeline control. Built by Glad Labs LLC."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    # Required transitively by topics_propose: services.topic_proposal_service
    # → services.stages.topic_decision_gate → plugins (top-level
    # plugins/__init__.py imports plugins.scheduler, which imports
    # apscheduler.schedulers.asyncio). Pinned to match
    # src/cofounder_agent/pyproject.toml ("^3.11.2"). See
    # Glad-Labs/poindexter#258.
    "apscheduler>=3.11.2,<4",
    # Required transitively by the worker ``services.*`` modules this server
    # imports (it puts src/cofounder_agent on sys.path). ``prompt_manager``
    # (UnifiedPromptManager) does ``import yaml`` to load YAML prompt defaults,
    # and it is reachable from several tools' import graphs. Absent here it
    # raised ``ModuleNotFoundError: No module named 'yaml'`` on the topic tools
    # (topics_show_batch et al. → topic_batch_service → topic_ranking →
    # prompt_manager). The topic read paths were also lazily decoupled from
    # prompt_manager (see services/topic_ranking.py), but PyYAML stays declared
    # here as the worker code this server runs legitimately depends on it.
    # Pinned to the same major the worker resolves (PyYAML 6.x).
    "pyyaml>=6.0,<7",
    # OAuth JWT verification for the HTTP transport (#241 Phase 1).
    # Kept on the same major as the cofounder_agent pin to avoid
    # signature-format drift between issuer and verifier.
    "pyjwt>=2.12.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
