[tool.poetry]
name = "poindexter-backend"
version = "0.2.0"
description = "Poindexter backend — FastAPI + specialized AI agents. Built by Glad Labs LLC."
authors = ["Matthew M. Gladding <mattg@gladlabs.io>"]
readme = "README.md"
packages = [
    { include = "cofounder_agent", from = ".." },
    { include = "poindexter", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Use headless opencv (doesn't require X11/GUI libraries in production)

# Web Framework
fastapi = ">=0.115.0"
uvicorn = {version = "^0.43", extras = ["standard"]}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.0"

# Database
asyncpg = "^0.31"
# sqlalchemy, psycopg2-binary, sqladmin removed — admin panel unused, all DB via asyncpg
# anthropic, openai removed — zero imports, pipeline uses Ollama via httpx
# google-genai removed — only in legacy llm_client.py (dead code)

# Async/Concurrency
aiohttp = "^3.9"
httpx = "^0.28"

# Environment & Config
python-dotenv = "^1.0"

# Data Processing
# pandas, numpy removed — never imported in production code. Legacy memory_system.py superseded by pgvector.

# Logging & Monitoring
python-json-logger = "^2.0"
setuptools = "<81"  # Pin to avoid pkg_resources deprecation (see: setuptools#3932)
# sentry-sdk removed — sentry_enabled=false, never configured. Grafana + brain daemon handle monitoring.

# Storage & Files
python-multipart = ">=0.0.26"
# pillow removed — never imported in production code (issue #1341)
aiofiles = "^25"

# ML/AI - Image Generation (SDXL)
torch = { version = ">=2.0.0", optional = true }
transformers = { version = ">=4.40.0", optional = true }
# `accelerate` removed — zero imports in tracked code. Was optional ml extra.

# Additional Required Packages
structlog = "^25"
pyjwt = ">=2.12.0,<3.0.0"  # CVE GHSA-752w-5fwx-jx9f fix — pin to safe 2.x series
# redis removed — redis_enabled=false, in-memory TTL cache is sufficient
diffusers = { version = "^0.36.0", optional = true }
# `peft` removed — zero imports in tracked code. Was optional ml extra.

# Content Processing
markdown = "^3.5"

# Utilities
python-slugify = "^8.0"
slowapi = "^0.1.9"
starlette = ">=0.49.1"
cryptography = ">=46.0.7"  # CVEs GHSA-r6ph-v2qm-q3c2, GHSA-m959-cc7f-wv43, GHSA-p423-j2cm-9vmq
# sqladmin removed — admin panel broken (404), pgAdmin used instead
email-validator = "^2.3.0"
resend = "^2.27.0"
ddgs = "^9.0"
beautifulsoup4 = "^4.12"
edge-tts = "^7.2.8"
boto3 = "^1.42.84"
cloudinary = "^1.41"
playwright = "^1.47"
pyasn1 = ">=0.6.3"
mcp = ">=1.23.0"
pillow = ">=12.2.0"
apscheduler = "^3.11.2"
prometheus-client = "^0.25.0"

[tool.poetry.extras]
ml = ["torch", "transformers", "diffusers"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
pytest-timeout = "^2.0"
pytest-xdist = "^3.0"
pytest-forked = "^1.6"
pytest-benchmark = "^4.0"

# Code Quality
black = "^26.3.1"
isort = "^5.0"
pylint = "^2.0"
ruff = "^0.15.0"
flake8 = "^6.0"
mypy = "^1.0"
bandit = "^1.7"

# Pre-commit
pre-commit = "^3.0"

# Development Tools
ipython = "^8.0"

[tool.poetry.scripts]
api = "cofounder_agent.main:app"
# Plain `poindexter <command>` CLI (no `python -m` required).
# Same entry point as python -m poindexter — routes through app.main.
poindexter = "poindexter.cli.app:main"

# Plugin discovery — setuptools entry_points groups used by
# plugins.registry.get_<type>(). Any package (core or third-party)
# that declares entry_points under these groups is discovered at
# runtime. See docs/architecture/plugin-architecture.md for the
# full design.
[tool.poetry.plugins."poindexter.taps"]
hello = "cofounder_agent.plugins.samples.hello_tap:HelloTap"
memory = "cofounder_agent.services.taps.memory:MemoryFilesTap"
posts = "cofounder_agent.services.taps.published_posts:PostsTap"
audit = "cofounder_agent.services.taps.audit:AuditTap"
brain_knowledge = "cofounder_agent.services.taps.brain_knowledge:BrainKnowledgeTap"
brain_decisions = "cofounder_agent.services.taps.brain_decisions:BrainDecisionsTap"
gitea_issues = "cofounder_agent.services.taps.gitea_issues:GiteaIssuesTap"
claude_code_sessions = "cofounder_agent.services.taps.claude_code_sessions:ClaudeCodeSessionsTap"

[tool.poetry.plugins."poindexter.probes"]
database = "cofounder_agent.plugins.samples.database_probe:DatabaseProbe"

[tool.poetry.plugins."poindexter.jobs"]
noop = "cofounder_agent.plugins.samples.noop_job:NoopJob"
sync_page_views = "cofounder_agent.services.jobs.sync_page_views:SyncPageViewsJob"
expire_stale_approvals = "cofounder_agent.services.jobs.expire_stale_approvals:ExpireStaleApprovalsJob"
db_backup = "cofounder_agent.services.jobs.db_backup:DbBackupJob"
render_prometheus_rules = "cofounder_agent.services.jobs.render_prometheus_rules:RenderPrometheusRulesJob"
postgres_vacuum = "cofounder_agent.services.jobs.postgres_vacuum:PostgresVacuumJob"

[tool.poetry.plugins."poindexter.topic_sources"]
hackernews = "cofounder_agent.services.topic_sources.hackernews:HackerNewsSource"
devto = "cofounder_agent.services.topic_sources.devto:DevtoSource"

[tool.poetry.plugins."poindexter.stages"]
verify_task = "cofounder_agent.services.stages.verify_task:VerifyTaskStage"
generate_content = "cofounder_agent.services.stages.generate_content:GenerateContentStage"
writer_self_review = "cofounder_agent.services.stages.writer_self_review:WriterSelfReviewStage"
quality_evaluation = "cofounder_agent.services.stages.quality_evaluation:QualityEvaluationStage"
url_validation = "cofounder_agent.services.stages.url_validation:UrlValidationStage"
replace_inline_images = "cofounder_agent.services.stages.replace_inline_images:ReplaceInlineImagesStage"
source_featured_image = "cofounder_agent.services.stages.source_featured_image:SourceFeaturedImageStage"
generate_seo_metadata = "cofounder_agent.services.stages.generate_seo_metadata:GenerateSeoMetadataStage"
generate_media_scripts = "cofounder_agent.services.stages.generate_media_scripts:GenerateMediaScriptsStage"
capture_training_data = "cofounder_agent.services.stages.capture_training_data:CaptureTrainingDataStage"
finalize_task = "cofounder_agent.services.stages.finalize_task:FinalizeTaskStage"
cross_model_qa = "cofounder_agent.services.stages.cross_model_qa:CrossModelQAStage"

[tool.poetry.plugins."poindexter.llm_providers"]
ollama_native = "cofounder_agent.services.llm_providers.ollama_native:OllamaNativeProvider"
openai_compat = "cofounder_agent.services.llm_providers.openai_compat:OpenAICompatProvider"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ===== TOOL CONFIGURATION =====

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["cofounder_agent"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 7
max-locals = 15
max-args = 8

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["../..", ".", "../"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "benchmark: benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["cofounder_agent"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
assert_used = { skips = ["*/tests/*"] }
